Fix a problem with overflowing section item

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,11 +200,10 @@ header .header-header {
 }
 
 .works-section .sections {
-  display: flex;
-  /* justify-content: space-around; */
   /* margin: 4em 0; */
   width: 100%;
-  /* flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .left-sections {
@@ -233,7 +232,7 @@ header .header-header {
 
 @media (max-width: 767px) {
   .works-section .sections {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
   .section-item {
     margin-bottom: 2em;
